basis webpage and basic animations

--- a/pathFinderAPI/pathfinder.html
+++ b/pathFinderAPI/pathfinder.html
@@ -21,19 +21,19 @@
             <button id="setterModeIndicator" class="dropbtn">Set Wall</button>
             <div class="dropdown-content">
                 <a onclick="toggleSetterMode('Wall')" href="#">Set Wall</a>
-                <a onclick="toggleSetterMode('StartPoint')" href="#">Set Start Point</a>
-                <a onclick="toggleSetterMode('EndPoint')" href="#">Set End Point</a>
+                <a onclick="toggleSetterMode('StartPoint')" href="#">Set StartPoint</a>
+                <a onclick="toggleSetterMode('EndPoint')" href="#">Set EndPoint</a>
             </div>
         </div> 
-        <a id="setWall" onclick="setWall()">ClearGrid</a>
         <a id="clearButton" onclick="clearGrid()">ClearGrid</a>
-        <a onclick="selectAlgo(document.getElementById())">initiate pathFinder</a>
+        <a onclick="selectAlgo()">initiate pathFinder</a>
         <a id="consoleGridPrinter" onclick="consoleGridPrinter()">consoleGridPrinter</a>
         <a id="conssoleVisitPrinter" onclick="consoleVisitPrinter()">consoleVisitPrinter</a>
     </div>
     <div class="legends">
         
     </div>
+
     <div id="graphWrapper" class="graph">
     </div>
 </body>
