--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <button id="algoIndicator" class="dropbtn">Select Algorithm</button>
             <div class="dropdown-content">
                 <a onclick="toggleAlgo('BFS')" href="#">BFS</a>
-                <a href="#">Link 2</a>
+                <a onclick="toggleAlgo('Dijkstra')" href="#">Dijkstra</a>
                 <a href="#">Link 3</a>
             </div>
         </div> 
