--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="dropdown-content">
                 <a onclick="toggleAlgo('BFS')" href="#">BFS</a>
                 <a onclick="toggleAlgo('Dijkstra')" href="#">Dijkstra</a>
-                <a href="#">Link 3</a>
+                <a onclick="toggleAlgo('NumberOfIslands')" href="#">NumberOfIslands</a>
             </div>
         </div> 
         <div class="dropdown">
